--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,20 +2,20 @@
   width: 100%;
   height: 100%;  
   background: #111;
-  transition: height 0.3s ease;
+  transition: transform 0.3s ease;
   position: relative;
   overflow: hidden;
-}
 
+
+}
+   .hidden {
+    transform: translateY(100%);
+    transition: transform 0.3s ease;
+  }
 .content-wrapper { 
   width: 100%;
   height: 100%;
-  transition: transform 0.3s ease; 
   box-sizing: border-box;
-
-  &.hidden {
-    transform: translateY(100%);
-  }
 }
 
 .footer-content {
@@ -24,29 +24,21 @@
   display: flex;
   align-items: stretch;
   justify-content: space-between;
+
+ 
 }
 
-.footer__left {
-  width: 250px;
+.footer__left, .footer__right { 
   flex-shrink: 0;
   background-color: #222;
   display: flex;
   align-items: stretch;
   justify-content: center;
+  transition: width 0.3s ease;
 }
 
 .footer__middle {
   flex: 1;
-  display: flex;
-  align-items: stretch;
-  justify-content: center;
-//   margin: 0 1rem;
-}
-
-.footer__right {
-  width: 250px;
-  flex-shrink: 0;
-  background-color: #1a1a1a;
   display: flex;
   align-items: stretch;
   justify-content: center;
