--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<app-top-mobile-spacer></app-top-mobile-spacer>
-<div class="main-container">
-  <div class="left-container">
-    <app-left></app-left>
-  </div> 
-  <div class="right-container"><router-outlet /></div>    
+<app-top-mobile-spacer></app-top-mobile-spacer> 
+<div class="vertical-container">
+  <div class="horizontal-container">
+    <div class="left-container">
+      <app-left></app-left>
+    </div>
+    <div class="right-container">
+      <router-outlet />
+    </div> 
+  </div>  
+  <app-footer [class.hidden]="!layoutService.showFooter()"></app-footer>
 </div> 
-<app-footer></app-footer> 
